# batuta

./: .cliff.toml  .commitlintrc.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  br.com.jeitto.meujeitto-reflutter-signed.apk.idsig  pyproject.toml
.github/: COMMIT_CONVENTION.md
.github/workflows/: commit-lint.yml  pr-validation.yml  publish.yml
scripts/: release.sh
src/batuta/: __init__.py  __main__.py  exceptions.py
src/batuta/cli/: analyze.py  apk.py  device.py  flutter.py  main.py
src/batuta/core/: adb.py  analyzer.py  decompiler.py  manifest.py  merger.py  patcher.py  reflutter.py
src/batuta/models/: analyze.py  apk.py  device.py  flutter.py  manifest.py
src/batuta/utils/: android_sdk.py  apk.py  config.py  deps.py  output.py  process.py
